@@ -1,3 +1,7 @@
+* 2013-10-17 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 29133: Special series pattern lead to reset of confirmation status.
+
 * 2013-10-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 21673: Signal appropriate permission for Unified Mail folders
